<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_html"
            android:icon="@drawable/ic_bio_html"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_github"
            android:icon="@drawable/ic_github"
            android:title="@string/menu_github" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/menu_call" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
