<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.renzard.michaelpolitakis.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_html"
        android:name="com.renzard.michaelpolitakis.ui.html.HtmlBioFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_call"
        android:name="com.renzard.michaelpolitakis.ui.call.CallFragment"
        android:label="@string/menu_call"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_github"
        android:name="com.renzard.michaelpolitakis.ui.github.GithubFragment"
        android:label="@string/menu_github"
        tools:layout="@layout/fragment_tools" />


    <fragment
        android:id="@+id/nav_send"
        android:name="com.renzard.michaelpolitakis.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>